# sokoban

./: .gitignore  Makefile  Mas Sasquatch.json  Microban.json  Original.json  README.md  Sasquatch III.json  Sasquatch IV.json  json2tiled  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
po/: sokoban.pot.in
sokoban/: __init__.py  __main__.py  sokoban_game.py
sokoban/levels/: 01.tmx  03.tmx  04.tmx  05.tmx  06.tmx  07.tmx  08.tmx  09.tmx  10.tmx  11.tmx  12.tmx  13.tmx  14.tmx  15.tmx  16.tmx  17.tmx  18.tmx  19.tmx  20.tmx  21.tmx  22.tmx  23.tmx  24.tmx  25.tmx  26.tmx  27.tmx  28.tmx  29.tmx  30.tmx  31.tmx  32.tmx  33.tmx  34.tmx  35.tmx  36.tmx  37.tmx  38.tmx  39.tmx  40.tmx  41.tmx  (+10 more)
test-levels/: 01.tmx  02.tmx  Sokoban.tsx
