[project]
name = "Sokoban"
version = "0.1"
description = "The classic puzzle game: tidy the warehouse"
license = {text = "GPL v3 or later"}
authors = [{name = "Reuben Thomas", email = "rrt@sc3d.org"}]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/Sokoban"}
requires-python = ">= 3.12"
dependencies = [
    "chambercourt >= 0.9.19",
]
classifiers = [
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Programming Language :: Python :: 3",
]

[project.scripts]
sokoban = "sokoban:main"

[build-system]
requires = ["build", "setuptools >= 62.3.0"]

[tool.setuptools]
packages = ["sokoban"]

[tool.setuptools.package-data]
Sokoban = ["**/*.png", "**/*.wav", "**/*.tmx", "**/*.tsx", "**/*.ttf", "**/*.mo"]

[tool.pyright]
include = ["sokoban"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.cxfreeze.executables]]
script = "sokoban/__main__.py"
base = "gui"
icon = "app-icon"
shortcut_name = "Sokoban"
shortcut_dir = "DesktopFolder"

[tool.cxfreeze.build_exe]
include_msvcr = true
